--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <h2>Pace to Python Mastery</h2>
+      <h2>Race to Python Mastery</h2>
       <p>
         Learn Python through the precision and speed of Formula 1<br>
         racing. Master variables like telemetry, loops like laps and<br>
