--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <div class="hero-content">
       <h2>Race to Python Mastery</h2>
       <p>
-        Learn Python through the precision and speed of Formula 1<br>
-        racing. Master variables like telemetry, loops like laps and<br>
+        Learn Python through the precision and speed of Formula 1
+        racing. Master variables like telemetry, loops like laps and
         functions like pit strategies
       </p>
       <button class="start-button">START RACING &gt;</button>
