--- a/index.html
+++ b/index.html
@@ -44,134 +44,135 @@
   </section>
 
   <!-- LEARNING MODULES -->
-  <section class="learning-modules">
-    <div class="modules-header">
-      <h2>LEARNING MODULES</h2>
-      <p class="modules-subheading">Progress through the circuit from rookie to champion</p>
+<section class="learning-modules">
+  <div class="modules-header">
+    <h2>LEARNING MODULES</h2>
+    <p class="modules-subheading">Progress through the circuit from rookie to champion</p>
+  </div>
+  <div class="modules-grid">
+    <!-- CARD 01 -->
+    <div class="module-card">
+      <div class="card-image" style="background-image: url('https://d6e2ad53-0075-412e-a7a3-3d56f9143fa0-00-1dt8zjk4034a4.picard.replit.dev/@fs/home/runner/workspace/attached_assets/generated_images/Dashboard_telemetry_module_image_94cb694c.png');">
+        <span class="difficulty rookie">Rookie</span>
+        <span class="card-number">01</span>
+      </div>
+      <div class="card-content">
+        <h3>Python Basics</h3>
+        <p class="card-subheading">Start your racing journey with variables, data types, and basic operations</p>
+        <p class="f1-comparison">DASHBOARD AND TELEMETRY</p>
+        <div class="card-progress">
+          <span class="progress-label">Progress</span>
+          <div class="progress-bar">
+            <div class="progress-fill" style="width: 20%;"></div>
+          </div>
+        </div>
+        <button class="start-button-small">START RACING &gt;</button>
+      </div>
     </div>
-    <div class="modules-grid">
-      <!-- CARD 01 -->
-      <div class="module-card">
-        <div class="card-image" style="background-image: url('https://d6e2ad53-0075-412e-a7a3-3d56f9143fa0-00-1dt8zjk4034a4.picard.replit.dev/@fs/home/runner/workspace/attached_assets/generated_images/Dashboard_telemetry_module_image_94cb694c.png');">
-          <span class="difficulty rookie">Rookie</span>
-          <span class="card-number">01</span>
-        </div>
-        <div class="card-content">
-          <h3>Python Basics</h3>
-          <p class="card-subheading">Start your racing journey with variables, data types, and basic operations</p>
-          <p class="f1-comparison">DASHBOARD AND TELEMETRY</p>
-          <div class="card-progress">
-            <span class="progress-label">Progress</span>
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: 20%;"></div>
-            </div>
-          </div>
-          <button class="start-button">START RACING &gt;</button>
-        </div>
-      </div>
 
-      <!-- CARD 02 -->
-      <div class="module-card">
-        <div class="card-image" style="background-image: url('https://d6e2ad53-0075-412e-a7a3-3d56f9143fa0-00-1dt8zjk4034a4.picard.replit.dev/@fs/home/runner/workspace/attached_assets/generated_images/Racing_track_aerial_view_6d870ba4.png');">
-          <span class="difficulty rookie">Rookie</span>
-          <span class="card-number">02</span>
-        </div>
-        <div class="card-content">
-          <h3>Control Flow & Loops</h3>
-          <p class="card-subheading">Master the racing line with if statements and loop through the laps</p>
-          <p class="f1-comparison">RACING LAPS AND STRATEGY</p>
-          <div class="card-progress">
-            <span class="progress-label">Progress</span>
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: 35%;"></div>
-            </div>
-          </div>
-          <button class="start-button">START RACING &gt;</button>
-        </div>
+    <!-- CARD 02 -->
+    <div class="module-card">
+      <div class="card-image" style="background-image: url('https://d6e2ad53-0075-412e-a7a3-3d56f9143fa0-00-1dt8zjk4034a4.picard.replit.dev/@fs/home/runner/workspace/attached_assets/generated_images/Racing_track_aerial_view_6d870ba4.png');">
+        <span class="difficulty rookie">Rookie</span>
+        <span class="card-number">02</span>
       </div>
-
-      <!-- CARD 03 -->
-      <div class="module-card">
-        <div class="card-image" style="background-image: url('https://d6e2ad53-0075-412e-a7a3-3d56f9143fa0-00-1dt8zjk4034a4.picard.replit.dev/@fs/home/runner/workspace/attached_assets/generated_images/Pit_crew_coordination_image_be1cbd3b.png');">
-          <span class="difficulty pro">Pro</span>
-          <span class="card-number">03</span>
-        </div>
-        <div class="card-content">
-          <h3>Functions & Methods</h3>
-          <p class="card-subheading">Coordinate your code like a pit crew with reusable functions</p>
-          <p class="f1-comparison">PIT STOP COORDINATION</p>
-          <div class="card-progress">
-            <span class="progress-label">Progress</span>
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: 10%;"></div>
-            </div>
+      <div class="card-content">
+        <h3>Control Flow & Loops</h3>
+        <p class="card-subheading">Master the racing line with if statements and loop through the laps</p>
+        <p class="f1-comparison">RACING LAPS AND STRATEGY</p>
+        <div class="card-progress">
+          <span class="progress-label">Progress</span>
+          <div class="progress-bar">
+            <div class="progress-fill" style="width: 35%;"></div>
           </div>
-          <button class="start-button">START RACING &gt;</button>
         </div>
+        <button class="start-button-small">START RACING &gt;</button>
       </div>
-
-      <!-- CARD 04 -->
-      <div class="module-card">
-        <div class="card-image" style="background-image: url('https://d6e2ad53-0075-412e-a7a3-3d56f9143fa0-00-1dt8zjk4034a4.picard.replit.dev/@fs/home/runner/workspace/attached_assets/generated_images/Car_components_technical_view_48831fb7.png');">
-          <span class="difficulty pro">Pro</span>
-          <span class="card-number">04</span>
-        </div>
-        <div class="card-content">
-          <h3>Data Structures</h3>
-          <p class="card-subheading">Organise your code components like a championship car</p>
-          <p class="f1-comparison">CAR ENGINEERING</p>
-          <div class="card-progress">
-            <span class="progress-label">Progress</span>
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: 50%;"></div>
-            </div>
-          </div>
-          <button class="start-button">START RACING &gt;</button>
-        </div>
-      </div>
-
-      <!-- CARD 05 -->
-      <div class="module-card">
-        <div class="card-image" style="background-image: url('https://d6e2ad53-0075-412e-a7a3-3d56f9143fa0-00-1dt8zjk4034a4.picard.replit.dev/@fs/home/runner/workspace/attached_assets/generated_images/Race_control_tower_image_570306d5.png');">
-          <span class="difficulty champion">Champion</span>
-          <span class="card-number">05</span>
-        </div>
-        <div class="card-content">
-          <h3>APIs & Libraries</h3>
-          <p class="card-subheading">Command your code from the control tower with external APIs</p>
-          <p class="f1-comparison">RACE CONTROL CENTER</p>
-          <div class="card-progress">
-            <span class="progress-label">Progress</span>
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: 5%;"></div>
-            </div>
-          </div>
-          <button class="start-button">START RACING &gt;</button>
-        </div>
-      </div>
-
-      <!-- CARD 06 -->
-      <div class="module-card">
-        <div class="card-image" style="background-image: url('https://cdn-6.motorsport.com/images/amp/YBe5yXW2/s1000/ferrari-sf-24.jpg');">
-          <span class="difficulty champion">Champion</span>
-          <span class="card-number">06</span>
-        </div>
-        <div class="card-content">
-          <h3>Advanced Python</h3>
-          <p class="card-subheading">Championship level techniques for podium performance</p>
-          <p class="f1-comparison">PODIUM PERFORMANCE</p>
-          <div class="card-progress">
-            <span class="progress-label">Progress</span>
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: 0%;"></div>
-            </div>
-          </div>
-          <button class="start-button">START RACING &gt;</button>
-        </div>
-      </div>
-
     </div>
-  </section>
+
+    <!-- CARD 03 -->
+    <div class="module-card">
+      <div class="card-image" style="background-image: url('https://d6e2ad53-0075-412e-a7a3-3d56f9143fa0-00-1dt8zjk4034a4.picard.replit.dev/@fs/home/runner/workspace/attached_assets/generated_images/Pit_crew_coordination_image_be1cbd3b.png');">
+        <span class="difficulty pro">Pro</span>
+        <span class="card-number">03</span>
+      </div>
+      <div class="card-content">
+        <h3>Functions & Methods</h3>
+        <p class="card-subheading">Coordinate your code like a pit crew with reusable functions</p>
+        <p class="f1-comparison">PIT STOP COORDINATION</p>
+        <div class="card-progress">
+          <span class="progress-label">Progress</span>
+          <div class="progress-bar">
+            <div class="progress-fill" style="width: 10%;"></div>
+          </div>
+        </div>
+        <button class="start-button-small">START RACING &gt;</button>
+      </div>
+    </div>
+
+    <!-- CARD 04 -->
+    <div class="module-card">
+      <div class="card-image" style="background-image: url('https://d6e2ad53-0075-412e-a7a3-3d56f9143fa0-00-1dt8zjk4034a4.picard.replit.dev/@fs/home/runner/workspace/attached_assets/generated_images/Car_components_technical_view_48831fb7.png');">
+        <span class="difficulty pro">Pro</span>
+        <span class="card-number">04</span>
+      </div>
+      <div class="card-content">
+        <h3>Data Structures</h3>
+        <p class="card-subheading">Organise your code components like a championship car</p>
+        <p class="f1-comparison">CAR ENGINEERING</p>
+        <div class="card-progress">
+          <span class="progress-label">Progress</span>
+          <div class="progress-bar">
+            <div class="progress-fill" style="width: 50%;"></div>
+          </div>
+        </div>
+        <button class="start-button-small">START RACING &gt;</button>
+      </div>
+    </div>
+
+    <!-- CARD 05 -->
+    <div class="module-card">
+      <div class="card-image" style="background-image: url('https://d6e2ad53-0075-412e-a7a3-3d56f9143fa0-00-1dt8zjk4034a4.picard.replit.dev/@fs/home/runner/workspace/attached_assets/generated_images/Race_control_tower_image_570306d5.png');">
+        <span class="difficulty champion">Champion</span>
+        <span class="card-number">05</span>
+      </div>
+      <div class="card-content">
+        <h3>APIs & Libraries</h3>
+        <p class="card-subheading">Command your code from the control tower with external APIs</p>
+        <p class="f1-comparison">RACE CONTROL CENTER</p>
+        <div class="card-progress">
+          <span class="progress-label">Progress</span>
+          <div class="progress-bar">
+            <div class="progress-fill" style="width: 5%;"></div>
+          </div>
+        </div>
+        <button class="start-button-small">START RACING &gt;</button>
+      </div>
+    </div>
+
+    <!-- CARD 06 -->
+    <div class="module-card">
+      <div class="card-image" style="background-image: url('https://cdn-6.motorsport.com/images/amp/YBe5yXW2/s1000/ferrari-sf-24.jpg');">
+        <span class="difficulty champion">Champion</span>
+        <span class="card-number">06</span>
+      </div>
+      <div class="card-content">
+        <h3>Advanced Python</h3>
+        <p class="card-subheading">Championship level techniques for podium performance</p>
+        <p class="f1-comparison">PODIUM PERFORMANCE</p>
+        <div class="card-progress">
+          <span class="progress-label">Progress</span>
+          <div class="progress-bar">
+            <div class="progress-fill" style="width: 0%;"></div>
+          </div>
+        </div>
+        <button class="start-button-small">START RACING &gt;</button>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
 </body>
 </html>
