--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
   <section class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <h2>Pace to Python Mastery</h2>
+      <h2>Race to Python Mastery</h2>
       <p>
-        Learn Python through the precision and speed of Formula 1<br>
-        racing. Master variables like telemetry, loops like laps and<br>
+        Learn Python through the precision and speed of Formula 1
+        racing. Master variables like telemetry, loops like laps and
         functions like pit strategies
       </p>
       <button class="start-button">START RACING &gt;</button>
@@ -168,6 +168,7 @@
           <button class="start-button-small">START RACING &gt;</button>
         </div>
       </div>
+
     </div>
   </section>
 </body>
